fix: 第五轮代码审查 - 播放器/网络/爬虫层全面优化
播放器层:
- MeasureHelper 修复 16:9/4:3 算法运算符优先级错误及 MATCH_PARENT 返回 MeasureSpec 而非 size 的错误
- IjkPlayer Context 转 Application、修复 headers 参数被丢弃导致部分视频源 403、reset 清理 Surface/Display、setVolume/setLooping 加异常捕获、release 清空 OnNativeInvokeListener、buffering 范围校验
- BaseVideoView release 退出全屏/小屏、清理 Handler 消息与监听器、AFD 置空、setVideoController NPE 防护、setmHandler 清理旧消息、onError mPlayerContainer NPE 防护、stopPlay IllegalStateException 防护
- AndroidMediaPlayer setVolume/setLooping 异常捕获、buffering 范围校验
- AudioFocusHelper abandonFocus 清理 Handler 消息
- VideoViewManager 分离 setConfig 与 lazy init、避免 null 入参覆盖配置、添加 releaseAllVideoViews

网络安全:
- OkHttp.string() try-with-resources 关闭 Response，避免连接泄漏
- OkHttp.dns() 防护 dnsOverHttps null
- OkhttpInterceptor 修复 Inflater native 内存泄漏、改大小写去敏感
- ProxySelector volatile 字段、Authenticator 不再泄漏外部类、豁免整个 loopback 段、split 限制为 2 段

工具与 Util:
- Path.read() 用 8KB buffer 循环读取替代 available()，避免 OOM/丢数据
- Path.unzip() 修复 Zip Slip 路径遍历漏洞
- Path.chmod() 用参数数组避免 shell 命令注入
- Path.clear() 保护根目录/外置存储根目录
- Path.local() 修复 file:// 前缀处理
- Util.size() 防止 size 超过 PB 导致数组越界
- Util.basic() 防护 uri.getUserInfo() null NPE
- Util.md5(File) try-with-resources + null 防护
- Util.equals() md5 null/empty 防护

爬虫层:
- Spider.safeDns() 防护 dnsOverHttps null
- JarLoader Response try-with-resources、字节流 !=-1 校验、HTTP 状态码校验、clsKey 白名单防止反射攻击、下载失败清理半成品、断言改为显式校验
- JsLoader 同上改进

API:
- ApiConfig.proxyLocal 修复括号错乱导致逻辑错乱、NPE 防护
- ApiConfig.clanContentFix indexOf 返回 -1 时防护

Python:
- PyLog longX 全系列 replace 改 substring，避免日志丢失
- PyToast 强制使用 Application Context、showMessage 复用 Toast 实例
- PythonLoader port 探测单端口 try-catch、localProxyUrl port<0 防护
- PythonSpider proxyLocal/init 全面 NPE/IOOBE 防护、getStream base64 解码失败回退空流、replaceLocalUrl null 防护

Base:
- App.onTerminate 添加 stopWebserver
- BaseActivity 屏幕宽高 0 时避免 NaN
- BaseLazyFragment onDestroyView 解绑 rootView 并释放 LoadSir、setLoadSir 防重复注册
- AppManager.finishActivity 先移除再 finish，避免与 onDestroy 中 finishActivity(this) 竞态